# SignerServer

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.txt  load.js  start.bat  version.def
.github/workflows/: build.yml  docker-publish.yml  release.yml
include/moehoo/: hook.h  proc_maps.h
include/mongoose/: mongoose.h
src/: exports.cpp  exports.h  hijacker.cpp  main.cpp  proc_maps.cpp  proc_maps.h  run_as_node.cpp  run_as_node.h  server.cpp  server.h  sign.cpp  sign.h  version.asm
